# EcoBridge-mocking-mocking-1

./: .editorconfig  .gitattributes  .gitignore  README.md  c.py  project_tree.txt  refactor_java.py  代码打印.py
.github/workflows/: main.yml  test.yml  watchdog.yml
docs/: MODERNIZATION.md
docs/economy/: README.md  long_run_stability.csv
ecobridge-java/: build.gradle.kts  settings.gradle.kts
ecobridge-java/config/checkstyle/: checkstyle.xml
ecobridge-java/config/detekt/: detekt.yml
ecobridge-java/src/main/java/top/ellan/ecobridge/: EcoBridge.java
ecobridge-java/src/main/java/top/ellan/ecobridge/api/: EcoLimitAPI.java  ItemLimit.java  MarketPhase.java
ecobridge-java/src/main/java/top/ellan/ecobridge/application/bootstrap/: AsmIntegrationLifecycle.java  CoreServiceLifecycle.java  InfrastructureLifecycle.java  PlatformIntegrationLifecycle.java  ReloadLifecycle.java  ShutdownLifecycle.java
ecobridge-java/src/main/java/top/ellan/ecobridge/util/: ConfigMigrator.java  ConfigValidator.java  HolidayManager.java  InternalPlaceholder.java  LogUtil.java  UltimateShopImporter.java
ecobridge-java/src/main/resources/: config.yml  paper-plugin.yml
ecobridge-java/src/main/resources/i18n/: messages.properties  messages_zh_CN.properties
ecobridge-rust/: Cargo.toml  build.rs  cbindgen.toml  ecobridge_rust.h
ecobridge-rust/src/: lib.rs  models.rs  storage.rs
ecobridge-rust/src/economy/: control.rs  environment.rs  macro_eco.rs  mod.rs  pricing.rs  summation.rs
ecobridge-rust/src/security/: mod.rs  regulator.rs
(+53 files in other folders)
